Fix word wrapping in main subtitles

--- a/app/views/player.scss
+++ b/app/views/player.scss
@@ -49,7 +49,7 @@
 	left: 50%;
 	transform: translateX(-50%);
 	margin: auto;
-	white-space: pre;
+	white-space: pre-wrap;
 	font-size: 1.5rem;
 	position: fixed;
 	text-align: center;
